--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>YH Restaurant</title>
+    <!-- Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Galada|Lobster|Oswald&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/25b3723894.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- The End Of The Head -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
